Improve image reload

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <div class="app-container">
         <h1 class="title">Image Assigner</h1>
         <p>This application loads a randomly generated image which can then be assigned to an email address. Users may see which images have been saved under each respective email address.</p>
-        <div class="res-container" id="res"></div>
+        <div class="res-container" id="res">
+            <img alt="randomly generated image" src="https://picsum.photos/500/300?">
+        </div>
         <button class="new-btn button" id="new-btn">New image</button>
         <form class="submit-form" id="submit-form">
             <label for="email">Enter email:</label>
