Prevent duplicate images in collections

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1 class="title">Image Assigner</h1>
         <p>This application loads a randomly generated image which can then be assigned to an email address. Users may see which images have been saved under each respective email address.</p>
         <div class="res-container" id="res">
-            <img alt="randomly generated image" src="https://picsum.photos/500/300?">
+            <img alt="randomly generated image" src="">
         </div>
         <button class="new-btn button" id="new-btn">New image</button>
         <form class="submit-form" id="submit-form">
